SERVER-32085 $changeStream reports incorrect documentKey for unsharded collections that become sharded